--- a/karting-club/package.json
+++ b/karting-club/package.json
@@ -1,14 +1,17 @@
 {
   "name": "karting-club",
   "version": "1.0.0",
-  "description": "Sitio web del club de karting",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
   }
 }
